c2prj1_cards/grade.txt
Grading at Sat Aug  1 16:05:13 UTC 2020
Compiling cards.c
cards.c:5:24: error: unknown type name ‘card_t’
 void assert_card_valid(card_t c) {
                        ^
cards.c:12:32: error: unknown type name ‘hand_ranking_t’
 const char * ranking_to_string(hand_ranking_t r) {
                                ^
cards.c:26:19: error: unknown type name ‘card_t’
 char value_letter(card_t c) {
                   ^
cards.c:43:18: error: unknown type name ‘card_t’
 char suit_letter(card_t c) {
                  ^
cards.c:56:17: error: unknown type name ‘card_t’
 void print_card(card_t c) {
                 ^
cards.c:62:1: error: unknown type name ‘card_t’
 card_t card_from_letters(char value_let, char suit_let) {
 ^
cards.c: In function ‘card_from_letters’:
cards.c:63:3: error: unknown type name ‘card_t’
   card_t temp;
   ^
cards.c:65:19: error: request for member ‘value’ in something not a structure or union
   case 'K' : {temp.value= 13;  break;}
                   ^
cards.c:66:20: error: request for member ‘value’ in something not a structure or union
   case '0' : { temp.value= 10;  break;}
                    ^
cards.c:67:19: error: request for member ‘value’ in something not a structure or union
   case 'A' :{ temp.value= 14;  break;}
                   ^
cards.c:68:18: error: request for member ‘value’ in something not a structure or union
   case 'Q' :{temp.value= 12; break;}
                  ^
cards.c:69:18: error: request for member ‘value’ in something not a structure or union
   case 'J' :{temp.value= 11; break;}
                  ^
cards.c:70:17: error: request for member ‘value’ in something not a structure or union
   default :{temp.value=value_let - '0';
                 ^
cards.c:74:21: error: request for member ‘suit’ in something not a structure or union
   case  's'  : {temp.suit =SPADES;  break;}
                     ^
cards.c:74:28: error: ‘SPADES’ undeclared (first use in this function)
   case  's'  : {temp.suit =SPADES;  break;}
                            ^
cards.c:74:28: note: each undeclared identifier is reported only once for each function it appears in
cards.c:75:21: error: request for member ‘suit’ in something not a structure or union
   case 'h' : {  temp.suit =HEARTS;  break;}
                     ^
cards.c:75:28: error: ‘HEARTS’ undeclared (first use in this function)
   case 'h' : {  temp.suit =HEARTS;  break;}
                            ^
cards.c:76:18: error: request for member ‘suit’ in something not a structure or union
   case 'd' :{temp.suit = DIAMONDS ;  break;}
                  ^
cards.c:76:26: error: ‘DIAMONDS’ undeclared (first use in this function)
   case 'd' :{temp.suit = DIAMONDS ;  break;}
                          ^
cards.c:77:18: error: request for member ‘suit’ in something not a structure or union
   case  'c':{temp.suit =CLUBS ; break;}
                  ^
cards.c:77:25: error: ‘CLUBS’ undeclared (first use in this function)
   case  'c':{temp.suit =CLUBS ; break;}
                         ^
cards.c:78:17: error: request for member ‘suit’ in something not a structure or union
   default: {temp.suit = NUM_SUITS;  break; }}
                 ^
cards.c:78:25: error: ‘NUM_SUITS’ undeclared (first use in this function)
   default: {temp.suit = NUM_SUITS;  break; }}
                         ^
cards.c:79:3: error: implicit declaration of function ‘assert_card_valid’ [-Werror=implicit-function-declaration]
   assert_card_valid(temp);
   ^
cards.c: At top level:
cards.c:83:1: error: unknown type name ‘card_t’
 card_t card_from_num(unsigned c) {
 ^
cards.c: In function ‘card_from_num’:
cards.c:84:3: error: unknown type name ‘card_t’
   card_t temp;
   ^
cards.c:86:7: error: request for member ‘value’ in something not a structure or union
   temp.value = value;
       ^
cards.c:90:18: error: request for member ‘suit’ in something not a structure or union
   case  0 : {temp.suit =SPADES;  break;}
                  ^
cards.c:90:25: error: ‘SPADES’ undeclared (first use in this function)
   case  0 : {temp.suit =SPADES;  break;}
                         ^
cards.c:91:19: error: request for member ‘suit’ in something not a structure or union
   case 1 : {  temp.suit =HEARTS;  break;}
                   ^
cards.c:91:26: error: ‘HEARTS’ undeclared (first use in this function)
   case 1 : {  temp.suit =HEARTS;  break;}
                          ^
cards.c:92:16: error: request for member ‘suit’ in something not a structure or union
   case 2 :{temp.suit = DIAMONDS ;  break;}
                ^
cards.c:92:24: error: ‘DIAMONDS’ undeclared (first use in this function)
   case 2 :{temp.suit = DIAMONDS ;  break;}
                        ^
cards.c:93:15: error: request for member ‘suit’ in something not a structure or union
   case 3:{temp.suit =CLUBS ; break;}
               ^
cards.c:93:22: error: ‘CLUBS’ undeclared (first use in this function)
   case 3:{temp.suit =CLUBS ; break;}
                      ^
cards.c:94:17: error: request for member ‘suit’ in something not a structure or union
   default: {temp.suit = NUM_SUITS;  break; }}
                 ^
cards.c:94:25: error: ‘NUM_SUITS’ undeclared (first use in this function)
   default: {temp.suit = NUM_SUITS;  break; }}
                         ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
